<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="44dp"
        android:text="@string/email_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_edit"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/email_edit"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="78dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:hint="@string/login_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_label"
        app:layout_constraintStart_toEndOf="@+id/email_label"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:text="@string/password_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_edit"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="187dp"
        android:ems="10"
        android:hint="@string/register_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/register"
        app:layout_constraintStart_toEndOf="@+id/password_label"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="146dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/register_label"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--<TextView-->
        <!--android:id="@+id/response"-->
        <!--android:layout_width="127dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_marginBottom="51dp"-->
        <!--android:layout_marginStart="21dp"-->
        <!--android:text="asdfas"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/login"-->
        <!--app:layout_constraintStart_toStartOf="@+id/login" />-->


</android.support.constraint.ConstraintLayout>