<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">


<EditText
    android:id="@+id/et_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/et_pwd"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:inputType="textPassword"
    app:layout_constraintStart_toStartOf="@+id/et_name"
    app:layout_constraintTop_toBottomOf="@+id/et_name" />

<EditText
    android:id="@+id/et_confirm_pwd"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="26dp"
    android:ems="10"
    android:inputType="textPassword"
    app:layout_constraintStart_toStartOf="@+id/et_pwd"
    app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

<EditText
    android:id="@+id/et_tel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="29dp"
    android:ems="10"
    android:inputType="phone"
    app:layout_constraintStart_toStartOf="@+id/et_confirm_pwd"
    app:layout_constraintTop_toBottomOf="@+id/et_confirm_pwd" />

<EditText
    android:id="@+id/et_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="26dp"
    android:ems="10"
    android:inputType="textEmailAddress"
    app:layout_constraintStart_toStartOf="@+id/et_tel"
    app:layout_constraintTop_toBottomOf="@+id/et_tel" />


<Button
    android:id="@+id/btn_register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="34dp"
    android:text="@string/register_label"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/et_email" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="41dp"
    android:text="@string/name_label"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/password_label"
    app:layout_constraintBaseline_toBaselineOf="@+id/et_pwd"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="26dp"
    android:text="@string/confirm_password_label"
    app:layout_constraintBaseline_toBaselineOf="@+id/et_confirm_pwd"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:text="@string/tel_label"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/et_tel" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/email_label"
    app:layout_constraintBaseline_toBaselineOf="@+id/et_email"
    app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>